--- a/index.html
+++ b/index.html
@@ -489,7 +489,6 @@
         const improvement = {
           id: improvementId,
           title: formData.title,
-          tema: formData.tema,
           room_name: formData.room_name,
           machine_name: formData.machine_name || null,
           problem: formData.problem,
@@ -854,7 +853,6 @@
                       <div class="flex justify-between items-start">
                         <div class="flex-1">
                           <h3 class="font-semibold text-gray-800">${imp.title}</h3>
-                          <p class="text-sm text-gray-600 mt-1">Tema: ${imp.tema}</p>
                           <p class="text-sm text-gray-500 mt-1">${new Date(imp.created_at).toLocaleDateString('id-ID')}</p>
                         </div>
                         <span class="px-3 py-1 rounded-full text-xs font-semibold ${getStatusColor(imp.status)}">
@@ -887,7 +885,7 @@
 
             <!-- Upload CSV -->
             <div class="bg-gradient-to-r from-blue-500 to-indigo-600 rounded-xl shadow-lg p-6 mb-6 text-white">
-              <h2 class="text-xl font-bold mb-2">📤 Upload User dari CSV (INSERT + UPDATE)</h2>
+              <h2 class="text-xl font-bold mb-2">📥 Upload User dari CSV (INSERT + UPDATE)</h2>
               <p class="text-sm mb-4 opacity-90">Format: NIK, NAMA, DEPARTEMEN, JABATAN, PASSWORD</p>
               <div class="bg-white rounded-lg p-4">
                 <input type="file" id="csvFileInput" accept=".csv,.txt" 
@@ -1004,15 +1002,6 @@
                     placeholder="Contoh: Perbaikan Sistem Conveyor Line A">
                 </div>
 
-                <div>
-                  <label for="tema" class="block text-sm font-medium text-gray-700 mb-2">
-                    Tema <span class="text-red-500">*</span>
-                  </label>
-                  <input type="text" id="tema" name="tema" required 
-                    class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-                    placeholder="Contoh: Efisiensi Produksi">
-                </div>
-
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                   <div>
                     <label for="room_name" class="block text-sm font-medium text-gray-700 mb-2">
@@ -1087,10 +1076,6 @@
                     placeholder="Rincian keuntungan/penghematan yang didapat..."></textarea>
                 </div>
 
-                <div class="bg-green-50 border border-green-300 rounded-lg p-4 mb-4">
-                  <p class="text-sm text-green-800 font-semibold">📸 Upload Gambar (Max 5MB per foto)</p>
-                  <p class="text-xs text-green-700 mt-1">Gambar akan di-upload ke Supabase Storage dengan kompresi otomatis!</p>
-                </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                   <div>
                     <label for="before_image" class="block text-sm font-medium text-gray-700 mb-2">
@@ -1271,10 +1256,6 @@
           </div>
 
           <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
-            <div>
-              <p class="text-sm font-semibold text-gray-700 mb-1">Tema:</p>
-              <p class="text-gray-600">${imp.tema}</p>
-            </div>
             <div>
               <p class="text-sm font-semibold text-gray-700 mb-1">Ruangan:</p>
               <p class="text-gray-600">${imp.room_name}</p>
@@ -1499,7 +1480,6 @@
       async function handleFormSubmit(isDraft) {
         const formData = {
           title: document.getElementById('title').value,
-          tema: document.getElementById('tema').value,
           room_name: document.getElementById('room_name').value,
           machine_name: document.getElementById('machine_name').value,
           problem: document.getElementById('problem').value,
@@ -1513,7 +1493,7 @@
         };
 
         if (!isDraft) {
-          if (!formData.title || !formData.tema || !formData.room_name || 
+          if (!formData.title || !formData.room_name || 
               !formData.problem || !formData.solution || !formData.total_cost || 
               !formData.cost_detail || !formData.total_benefit || !formData.benefit_detail) {
             showToast('Mohon isi semua field yang wajib!', true);
@@ -1543,5 +1523,5 @@
       render();
     });
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9af2193786b455de',t:'MTc2NTkyOTE4OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9af23016334e5f60',t:'MTc2NTkzMDEyNi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
