--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
         <div class="min-h-full flex items-center justify-center p-4">
           <div class="bg-white rounded-2xl shadow-2xl p-8 w-full max-w-md">
             <div class="text-center mb-8">
-              <h1 class="text-3xl font-bold text-gray-800 mb-2">🚀 Improvement Tracker</h1>
+              <h1 class="text-3xl font-bold text-gray-800 mb-2">🚀 Dashboard CONIM PT GOF 2026</h1>
               <p class="text-gray-600">Sistem Manajemen Perbaikan</p>
             </div>
             <form id="loginForm" class="space-y-6">
